--- a/index.html
+++ b/index.html
@@ -7,21 +7,38 @@
 	</head>
 	<body>
 	
-   	<h2>[Verse 1:]</h2>
- <p>It might seem crazy what I’m about to say
-Sunshine she’s here, you can take a break
-I’m a hot air balloon that could go to space
-With the air, like I don’t care baby by the way</p>
+   		<h2>[Verse 1:]</h2>
+ 		<p>It might seem crazy what I’m about to say
+		Sunshine she’s here, you can take a break
+		I’m a hot air balloon that could go to space
+		With the air, like I don’t care baby by the way</p>
 
-<h2>[Hook:]</h2>
-<p>Because I’m happy
-Clap along if you feel like a room without a roof
-Because I’m happy
-Clap along if you feel like happiness is the truth
-Because I’m happy
-Clap along if you know what happiness is to you
-Because I’m happy
-Clap along if you feel like that’s what you want to do</p>
+		<h2>[Hook:]</h2>
+		<p>Because I’m happy
+		Clap along if you feel like a room without a roof
+		Because I’m happy
+		Clap along if you feel like happiness is the truth
+		Because I’m happy
+		Clap along if you know what happiness is to you
+		Because I’m happy
+		Clap along if you feel like that’s what you want to do</p>
+
+		<h2>[Verse 2:]</h2>
+		<p>Here come bad news talking this and that
+		Yeah, give me all you got, don’t hold back
+		Yeah, well I should probably warn you I’ll be just fine
+		Yeah, no offense to you don’t waste your time
+		Here’s why</p>
+
+		<h2>[Hook:]</h2>
+		<p>Because I’m happy
+		Clap along if you feel like a room without a roof
+		Because I’m happy
+		Clap along if you feel like happiness is the truth
+		Because I’m happy
+		Clap along if you know what happiness is to you
+		Because I’m happy
+		Clap along if you feel like that’s what you want do</p>
     	
 	</body>
 </html>
