--- a/index.html
+++ b/index.html
@@ -39,6 +39,34 @@
 		Clap along if you know what happiness is to you
 		Because I’m happy
 		Clap along if you feel like that’s what you want do</p>
+		
+		<h2>[Bridge:]</h2>
+<p>Happy, bring me down.
+Can't none, 
+Bring me down.
+My level's too high,
+Bring me down
+Can't none,
+Bring me down.
+I said bring me down
+Can't none,
+Bring me down
+My level's too high, 
+Bring me down
+Can't none, 
+Bring me down
+I said</p>
+
+<h2>[Hook:]</h2>
+<p>Because I’m happy
+Clap along if you feel like a room without a roof
+Because I’m happy
+Clap along if you feel like happiness is the truth
+Because I’m happy
+Clap along if you know what happiness is to you
+Because I’m happy
+Clap along if you feel like that’s what you wanna do</p>
+
     	
 	</body>
 </html>
