--- a/index.html
+++ b/index.html
@@ -2,69 +2,69 @@
 <html lang="en">
 	<head>
     	<meta charset="UTF-8">
-    	<title>About me</title>
+    	<title>7.3</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-	
+		<h1> Happy<br>Pharrell Williams</h1>
    		<h2>[Verse 1:]</h2>
- 		<p>It might seem crazy what I’m about to say
-		Sunshine she’s here, you can take a break
-		I’m a hot air balloon that could go to space
+ 		<p>It might seem crazy what I’m about to say<br>
+		Sunshine she’s here, you can take a break<br>
+		I’m a hot air balloon that could go to space<br>
 		With the air, like I don’t care baby by the way</p>
 
 		<h2>[Hook:]</h2>
-		<p>Because I’m happy
-		Clap along if you feel like a room without a roof
-		Because I’m happy
-		Clap along if you feel like happiness is the truth
-		Because I’m happy
-		Clap along if you know what happiness is to you
-		Because I’m happy
+		<p>Because I’m happy<br>
+		Clap along if you feel like a room without a roof<br>
+		Because I’m happy<br>
+		Clap along if you feel like happiness is the truth<br>
+		Because I’m happy<br>
+		Clap along if you know what happiness is to you<br>
+		Because I’m happy<br>
 		Clap along if you feel like that’s what you want to do</p>
 
 		<h2>[Verse 2:]</h2>
-		<p>Here come bad news talking this and that
-		Yeah, give me all you got, don’t hold back
-		Yeah, well I should probably warn you I’ll be just fine
-		Yeah, no offense to you don’t waste your time
+		<p>Here come bad news talking this and that<br>
+		Yeah, give me all you got, don’t hold back<br>
+		Yeah, well I should probably warn you I’ll be just fine<br>
+		Yeah, no offense to you don’t waste your time<br>
 		Here’s why</p>
 
 		<h2>[Hook:]</h2>
-		<p>Because I’m happy
-		Clap along if you feel like a room without a roof
-		Because I’m happy
-		Clap along if you feel like happiness is the truth
-		Because I’m happy
-		Clap along if you know what happiness is to you
-		Because I’m happy
+		<p>Because I’m happy<br>
+		Clap along if you feel like a room without a roof<br>
+		Because I’m happy<br>
+		Clap along if you feel like happiness is the truth<br>
+		Because I’m happy<br>
+		Clap along if you know what happiness is to you<br>
+		Because I’m happy<br>
 		Clap along if you feel like that’s what you want do</p>
 		
 		<h2>[Bridge:]</h2>
-<p>Happy, bring me down.
-Can't none, 
-Bring me down.
-My level's too high,
-Bring me down
-Can't none,
-Bring me down.
-I said bring me down
-Can't none,
-Bring me down
-My level's too high, 
-Bring me down
-Can't none, 
-Bring me down
+<p>Happy, bring me down.<br>
+Can't none, <br>
+Bring me down.<br>
+My level's too high,<br>
+Bring me down<br>
+Can't none,<br>
+Bring me down.<br>
+I said bring me down<br>
+Can't none,<br>
+Bring me down<br>
+My level's too high,<br>
+Bring me down<br>
+Can't none,<br> 
+Bring me down<br>
 I said</p>
 
 <h2>[Hook:]</h2>
-<p>Because I’m happy
-Clap along if you feel like a room without a roof
-Because I’m happy
-Clap along if you feel like happiness is the truth
-Because I’m happy
-Clap along if you know what happiness is to you
-Because I’m happy
+<p>Because I’m happy<br>
+Clap along if you feel like a room without a roof<br>
+Because I’m happy<br>
+Clap along if you feel like happiness is the truth<br>
+Because I’m happy<br>
+Clap along if you know what happiness is to you<br>
+Because I’m happy<br>
 Clap along if you feel like that’s what you wanna do</p>
 
     	
