Add next paragraph

--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@ Clap along if you know what happiness is to you<br>
 Because I’m happy<br>
 Clap along if you feel like that’s what you wanna do</p>
 
-    	
+  <p>Happy</p>  	
 	</body>
 </html>
