--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<h1> Happy<br>Pharrell Williams</h1>
+		<h1>song</h1>
    		<h2>[Verse 1:]</h2>
  		<p>It might seem crazy what I’m about to say<br>
 		Sunshine she’s here, you can take a break<br>
@@ -67,6 +68,6 @@ Clap along if you know what happiness is to you<br>
 Because I’m happy<br>
 Clap along if you feel like that’s what you wanna do</p>
 
-    	
+ <p>happy</p>   	
 	</body>
 </html>
