Add class Kasia

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     	<title>7.3</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body>
+	<body class="Kasia">
 		<h1> Happy<br>Pharrell Williams</h1>
 		<h1>song</h1>
    		<h2>[Verse 1:]</h2>
