Add finished about page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Because I’m happy<br>
 Clap along if you feel like that’s what you wanna do</p>
 
 
-  <p>Happy</p>  	
+  <p>Happy, happy, happy...</p>  	
 
 	</body>
 </html>
