Add finished contact page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body class="Kasia">
 		<h1> Happy<br>Pharrell Williams</h1>
-		<h1>song</h1>
+		<h1>nice song</h1>
    		
 
    		<h2>[Verse 1:] :-) </h2>
