--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
     	<meta charset="UTF-8">
     	<title>7.4 branch</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body class="Kasia">
 		<h1> Happy<br>Pharrell Williams</h1>
